--- a/.gitconfig
+++ b/.gitconfig
@@ -11,10 +11,10 @@
 	interactive = auto
 	diff = auto
 [alias]
-	# l = "!bash ~/.githelpers"
-	l     = log --graph --pretty=format:\"%Cblue%h%Cgreen %an%Creset: %s\"
+	l = "!bash ~/.githelpers"
+  # l     = log --graph --pretty=format:\"%Cblue%h%Cgreen %an%Creset: %s\"
 	graph = log --graph --pretty=format:\"%Cblue%h%Cgreen %an%Creset: %s\"
-    g     = log --graph --pretty=format:\"%Cblue%h%Cgreen %an%Creset: %s\" 
+  g     = log --graph --pretty=format:\"%Cblue%h%Cgreen %an%Creset: %s\" 
 	st = status
 	ci = commit
 	cim = commit -m 
