--- a/.gitconfig
+++ b/.gitconfig
@@ -11,9 +11,10 @@
 	interactive = auto
 	diff = auto
 [alias]
-	l = "!bash ~/.githelpers"
-	graph = log --graph --pretty=format:\"%Cblue%h%Cgreen %an%Creset: %s\"
-  g     = log --graph --pretty=format:\"%Cblue%h%Cgreen %an%Creset: %s\" 
+  # l = "!bash ~/.githelpers"
+  l     = log --graph --pretty=format:\"%C(yellow)%h%C(green) %ar%C(blue) %an%C(red)%d%C(reset) %s\" 
+  graph = log --graph --pretty=format:\"%C(yellow)%h%C(green) %ar%C(blue) %an%C(red)%d%C(reset) %s\" 
+  g     = log --graph --pretty=format:\"%C(yellow)%h%C(green) %ar%C(blue) %an%C(red)%d%C(reset) %s\" 
 	st = status
 	ci = commit
 	cim = commit -m 
@@ -22,3 +23,5 @@
 	ds = diff --staged
 	aa = add --all
 	ff = merge --ff-only
+  amend = commit --amend
+  unstage = reset HEAD
