--- a/.gitmodules
+++ b/.gitmodules
@@ -60,3 +60,6 @@
 	path = .vim/bundle/xterm-color-table.vim
 	url = https://github.com/vim-scripts/xterm-color-table.vim.git
   ignore = dirty
+[submodule ".vim/bundle/vim-endwise"]
+	path = .vim/bundle/vim-endwise
+	url = https://github.com/tpope/vim-endwise.git
