--- a/.gitmodules
+++ b/.gitmodules
@@ -63,3 +63,6 @@
 [submodule ".vim/bundle/vim-endwise"]
 	path = .vim/bundle/vim-endwise
 	url = https://github.com/tpope/vim-endwise.git
+[submodule ".vim/bundle/indenthtml.vim"]
+	path = .vim/bundle/indenthtml.vim
+	url = https://github.com/vim-scripts/indenthtml.vim.git
