--- a/.gitmodules
+++ b/.gitmodules
@@ -66,3 +66,6 @@
 [submodule ".vim/bundle/indenthtml.vim"]
 	path = .vim/bundle/indenthtml.vim
 	url = https://github.com/vim-scripts/indenthtml.vim.git
+[submodule ".vim/bundle/vim-javascript"]
+	path = .vim/bundle/vim-javascript
+	url = https://github.com/pangloss/vim-javascript.git
