--- a/tmux.conf
+++ b/tmux.conf
@@ -2,7 +2,7 @@
 
 # Setting the prefix from C-b to C-a
 # START:prefix
-set -g prefix C-a
+set -g prefix C-e
 # END:prefix
 
 # Free the original Ctrl-b prefix keybinding
@@ -17,7 +17,7 @@ set -sg escape-time 1
 
 # Ensure that we can send Ctrl-A to other apps
 # START:bind_prefix
-bind C-a send-prefix
+bind C-e send-prefix
 # END:bind_prefix
 
 # Set the base index for windows to 1 instead of 0
@@ -37,7 +37,7 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # splitting panes
 # START:panesplit
-bind | split-window -h
+bind \ split-window -h
 bind - split-window -v
 # END:panesplit
 
@@ -65,7 +65,7 @@ bind -r L resize-pane -R 5
 
 # mouse support - set to on if you want to use the mouse
 # START:mouse
-setw -g mode-mouse off
+setw -g mode-mouse on
 # END:mouse
 set -g mouse-select-pane off
 set -g mouse-resize-pane off
