--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,11 @@
+# Sane scrolling
+set -g terminal-overrides 'xterm*:smcup@:rmcup@''
+
 # Our .tmux.conf file
 
 # Setting the prefix from C-b to C-a
 # START:prefix
-set -g prefix C-e
+set -g prefix C-a
 # END:prefix
 
 # Free the original Ctrl-b prefix keybinding
@@ -17,7 +20,7 @@ set -sg escape-time 1
 
 # Ensure that we can send Ctrl-A to other apps
 # START:bind_prefix
-bind C-e send-prefix
+bind C-a send-prefix
 # END:bind_prefix
 
 # Set the base index for windows to 1 instead of 0
