--- a/tmux.conf
+++ b/tmux.conf
@@ -78,8 +78,8 @@ set -g default-terminal "screen-256color"
 
 # enable activity alerts
 #START:activity
-setw -g monitor-activity on
-set -g visual-activity on
+setw -g monitor-activity off
+set -g visual-activity off
 #END:activity
 
 # set the status line's colors
