--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 # Our .tmux.conf file
 
-set-option -g default-shell /usr/bin/zsh
+set-option -g default-shell $SHELL
 
 # Setting the prefix from C-b to C-a
 # START:prefix
