--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,8 @@
 
 set-option -g default-shell $SHELL
 
+set-option -g update-environment "SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION"
+
 # Setting the prefix from C-b to C-a
 # START:prefix
 set -g prefix C-a
