Fix SSH_AUTH_SOCK for re-attached tmux / screen sessions.

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,7 +2,8 @@
 
 set-option -g default-shell $SHELL
 
-set-option -g update-environment "SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION"
+set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
+set-environment -g 'SSH_AUTH_SOCK' '/home/<yourusername>/.ssh/ssh_auth_sock'
 
 # Setting the prefix from C-b to C-a
 # START:prefix
