Fix broken prompt and SSH_AUTH_SOCK reference.

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,7 +3,7 @@
 set-option -g default-shell $SHELL
 
 set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
-set-environment -g 'SSH_AUTH_SOCK' '/home/<yourusername>/.ssh/ssh_auth_sock'
+set-environment -g 'SSH_AUTH_SOCK' '/home/tim/.ssh/ssh_auth_sock'
 
 # Setting the prefix from C-b to C-a
 # START:prefix
