tmux shortcut tweaks.

--- a/tmux.conf
+++ b/tmux.conf
@@ -153,13 +153,13 @@ set -g status-justify centre
 setw -g mode-keys vi
 # END:vikeys
 
-# Open panes in the same directory using the tmux-panes script
-# START:tmuxpanes
-unbind v
-unbind n
-bind v send-keys " ~/tmux-panes -h" C-m
-bind n send-keys " ~/tmux-panes -v" C-m
-# END:tmuxpanes
+# # Open panes in the same directory using the tmux-panes script
+# # START:tmuxpanes
+# unbind v
+# unbind n
+# bind v send-keys " ~/tmux-panes -h" C-m
+# bind n send-keys " ~/tmux-panes -v" C-m
+# # END:tmuxpanes
 
 # Maximize and restore a pane
 # START:max
