--- a/.gitmodules
+++ b/.gitmodules
@@ -78,3 +78,6 @@
 [submodule "vim/bundle/vim-haml"]
 	path = vim/bundle/vim-haml
 	url = git@github.com:tpope/vim-haml.git
+[submodule "vim/bundle/you-complete-me"]
+	path = vim/bundle/you-complete-me
+	url = git://github.com/Valloric/YouCompleteMe.git
