--- a/.gitmodules
+++ b/.gitmodules
@@ -84,3 +84,6 @@
 [submodule "vim/bundle/vim-rabl"]
 	path = vim/bundle/vim-rabl
 	url = git://github.com/yaymukund/vim-rabl.git
+[submodule "vim/bundle/vim-less"]
+	path = vim/bundle/vim-less
+	url = git://github.com/groenewege/vim-less.git
