Set tmux scroll buffer to 5000 lines.

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,9 @@ set-environment -g 'SSH_AUTH_SOCK' ~/.ssh/ssh_auth_sock
 # Setting the prefix from C-b to C-a
 set -g prefix C-a
 
+# Set scroll buffer
+set -g history-limit 5000
+
 # Free the original Ctrl-b prefix keybinding
 unbind C-b
 
