Add js-indent submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -97,3 +97,6 @@
 [submodule "vim/bundle/vim-snippets"]
 	path = vim/bundle/vim-snippets
 	url = https://github.com/honza/vim-snippets.git
+[submodule "vim/bundle/vim-js-indent"]
+	path = vim/bundle/vim-js-indent
+	url = https://github.com/vim-scripts/JavaScript-Indent.git
