--- a/.gitmodules
+++ b/.gitmodules
@@ -98,3 +98,7 @@
 	path = vim/bundle/ultisnips
 	url = git://github.com/SirVer/ultisnips.git
   ignore = dirty
+[submodule "vim/bundle/vim-ragtag"]
+	path = vim/bundle/vim-ragtag
+	url = https://github.com/tpope/vim-ragtag.git
+  ignore = dirty
