--- a/tmux.conf
+++ b/tmux.conf
@@ -50,9 +50,9 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # mouse support - set to on if you want to use the mouse
-setw -g mode-mouse off
-set -g mouse-select-pane off
-set -g mouse-resize-pane off
+setw -g mode-mouse on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
 set -g mouse-select-window off
 
 # Set the default terminal mode to 256color mode
@@ -72,15 +72,15 @@ setw -g window-status-bg default
 setw -g window-status-attr dim
 
 # set colors for the active window
-setw -g window-status-current-fg white
-setw -g window-status-current-bg red
+setw -g window-status-current-fg black
+setw -g window-status-current-bg cyan
 setw -g window-status-current-attr bright
 
 # pane colors
 set -g pane-border-fg green
 set -g pane-border-bg black
-set -g pane-active-border-fg white
-set -g pane-active-border-bg yellow
+# set -g pane-active-border-fg white
+# set -g pane-active-border-bg yellow
 
 # Command / message line
 set -g message-fg white
@@ -95,7 +95,7 @@ set -g status-utf8 on
 
 # Status line right side
 # 15% | 28 Nov 18:15
-set -g status-right "#(~/battery Discharging) | #[fg=cyan]%d %b %R"
+set -g status-right "#[fg=cyan]%d %b %R"
 
 # Update the status bar every sixty seconds
 set -g status-interval 60
