--- a/tmux.conf
+++ b/tmux.conf
@@ -115,3 +115,8 @@ bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
 # Log output to a text file on demand
 bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
 
+# Smart pane switching with awareness of vim splits
+bind -n C-h run-shell 'tmux-vim-select-pane -L'
+bind -n C-j run-shell 'tmux-vim-select-pane -D'
+bind -n C-k run-shell 'tmux-vim-select-pane -U'
+bind -n C-l run-shell "tmux-clear-or-select-pane"
