--- a/tmux.conf
+++ b/tmux.conf
@@ -33,12 +33,6 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind \ split-window -h
 bind - split-window -v
 
-# moving between panes
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
 # Quick pane selection
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
@@ -53,7 +47,7 @@ bind -r L resize-pane -R 5
 setw -g mode-mouse on
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
-set -g mouse-select-window off
+set -g mouse-select-window on
 
 # Set the default terminal mode to 256color mode
 set -g default-terminal "screen-256color"
@@ -78,9 +72,9 @@ setw -g window-status-current-attr bright
 
 # pane colors
 set -g pane-border-fg green
-set -g pane-border-bg black
-# set -g pane-active-border-fg white
-# set -g pane-active-border-bg yellow
+set -g pane-border-bg default
+set -g pane-active-border-fg green
+set -g pane-active-border-bg default
 
 # Command / message line
 set -g message-fg white
@@ -120,3 +114,5 @@ bind -n C-h run-shell 'tmux-vim-select-pane -L'
 bind -n C-j run-shell 'tmux-vim-select-pane -D'
 bind -n C-k run-shell 'tmux-vim-select-pane -U'
 bind -n C-l run-shell "tmux-clear-or-select-pane"
+
+bind -n M-l send-keys "C-l"
