--- a/tmux.conf
+++ b/tmux.conf
@@ -61,13 +61,13 @@ set -g status-fg white
 set -g status-bg black
 
 # set the color of the window list
-setw -g window-status-fg cyan
+setw -g window-status-fg green
 setw -g window-status-bg default
 setw -g window-status-attr dim
 
 # set colors for the active window
 setw -g window-status-current-fg black
-setw -g window-status-current-bg cyan
+setw -g window-status-current-bg green
 setw -g window-status-current-attr bright
 
 # pane colors
@@ -89,7 +89,7 @@ set -g status-utf8 on
 
 # Status line right side
 # 15% | 28 Nov 18:15
-set -g status-right "#[fg=cyan]%d %b %R"
+set -g status-right "#[fg=green]%d %b %R"
 
 # Update the status bar every sixty seconds
 set -g status-interval 60
