--- a/tmux.conf
+++ b/tmux.conf
@@ -1,18 +1,13 @@
-# Our .tmux.conf file
-
 set-option -g default-shell $SHELL
+set -g default-terminal "screen-256color"
 
 set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
 set-environment -g 'SSH_AUTH_SOCK' ~/.ssh/ssh_auth_sock
 
-# Setting the prefix from C-b to C-a
 set -g prefix C-a
 
 # Set scroll buffer
 set -g history-limit 5000
-
-# Free the original Ctrl-b prefix keybinding
-unbind C-b
 
 #setting the delay between prefix and command
 set -sg escape-time 1
@@ -29,10 +24,6 @@ setw -g pane-base-index 1
 # Reload the file with Prefix r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# splitting panes
-bind \ split-window -h
-bind - split-window -v
-
 # Quick pane selection
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
@@ -43,31 +34,28 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-# mouse support - set to on if you want to use the mouse
+# mouse support
 setw -g mode-mouse on
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
 set -g mouse-select-window on
-
-# Set the default terminal mode to 256color mode
-set -g default-terminal "screen-256color"
 
 # enable activity alerts
 setw -g monitor-activity off
 set -g visual-activity off
 
 # set the status line's colors
-set -g status-fg white
-set -g status-bg black
+set -g status-fg default
+set -g status-bg default
 
 # set the color of the window list
-setw -g window-status-fg green
+setw -g window-status-fg default
 setw -g window-status-bg default
 setw -g window-status-attr dim
 
 # set colors for the active window
-setw -g window-status-current-fg black
-setw -g window-status-current-bg green
+setw -g window-status-current-fg default
+setw -g window-status-current-bg white
 setw -g window-status-current-attr bright
 
 # pane colors
@@ -88,7 +76,6 @@ set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
 set -g status-utf8 on
 
 # Status line right side
-# 15% | 28 Nov 18:15
 set -g status-right "#[fg=green]%d %b %R"
 
 # Update the status bar every sixty seconds
@@ -100,12 +87,6 @@ set -g status-justify centre
 # enable vi keys.
 setw -g mode-keys vi
 
-# Maximize and restore a pane
-unbind Up
-bind Up new-window -d -n tmp \; swap-pane -s tmp.1 \; select-window -t tmp
-unbind Down
-bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
-
 # Log output to a text file on demand
 bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
 
@@ -115,4 +96,5 @@ bind -n C-j run-shell 'tmux-vim-select-pane -D'
 bind -n C-k run-shell 'tmux-vim-select-pane -U'
 bind -n C-l run-shell "tmux-clear-or-select-pane"
 
+# Since C-l is used above, add Option-l fallback for screen clearing
 bind -n M-l send-keys "C-l"
