--- a/tmux.conf
+++ b/tmux.conf
@@ -94,7 +94,7 @@ bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
 bind -n C-h run-shell 'tmux-vim-select-pane -L'
 bind -n C-j run-shell 'tmux-vim-select-pane -D'
 bind -n C-k run-shell 'tmux-vim-select-pane -U'
-bind -n C-l run-shell "tmux-clear-or-select-pane"
+bind -n C-l run-shell 'tmux-vim-select-pane -R'
 
 # Since C-l is used above, add Option-l fallback for screen clearing
 bind -n M-l send-keys "C-l"
