Environment-dependent tmux configurations.

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,7 +2,7 @@ set-option -g default-shell $SHELL
 set -g default-terminal "screen-256color"
 
 set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
-set-environment -g 'SSH_AUTH_SOCK' ~/.ssh/ssh_auth_sock
+if-shell "uname | grep -qv Darwin" "set-environment -g 'SSH_AUTH_SOCK' ~/.ssh/ssh_auth_sock"
 
 set -g prefix C-a
 
