--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,14 @@
 set-option -g default-shell $SHELL
 set -g default-terminal "screen-256color"
 
-set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
+# Set the base index for windows to 1 instead of 0
+set -g base-index 1
+
+# Set the base index for panes to 1 instead of 0
+setw -g pane-base-index 1
+
+set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY ITERM_PROFILE"
+
 if-shell "uname | grep -qv Darwin" "set-environment -g 'SSH_AUTH_SOCK' ~/.ssh/ssh_auth_sock"
 
 set -g prefix C-a
@@ -14,12 +21,6 @@ set -sg escape-time 1
 
 # Ensure that we can send Ctrl-A to other apps
 bind C-a send-prefix
-
-# Set the base index for windows to 1 instead of 0
-set -g base-index 1
-
-# Set the base index for panes to 1 instead of 0
-setw -g pane-base-index 1
 
 # Reload the file with Prefix r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
