Don't abbreviate month name in tmux status-line.

--- a/tmux.conf
+++ b/tmux.conf
@@ -77,7 +77,7 @@ set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
 set -g status-utf8 on
 
 # Status line right side
-set -g status-right "#[fg=green]%d %b %R"
+set -g status-right "#[fg=green]%d %B %R"
 
 # Update the status bar every sixty seconds
 set -g status-interval 60
