--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
+# Vim bundles
 [submodule "vim/bundle/html5-syntax.vim"]
 	path = vim/bundle/html5-syntax.vim
 	url = git://github.com/othree/html5-syntax.vim.git
@@ -99,9 +100,6 @@
 [submodule "vim/bundle/vim-indent-object"]
 	path = vim/bundle/vim-indent-object
 	url = https://github.com/michaeljsmith/vim-indent-object.git
-[submodule "lib/z"]
-	path = lib/z
-	url = https://github.com/rupa/z.git
 [submodule "vim/bundle/vim-tmux-navigator"]
 	path = vim/bundle/vim-tmux-navigator
 	url = https://github.com/christoomey/vim-tmux-navigator.git
@@ -120,3 +118,11 @@
 	path = vim/bundle/vim-change-hash-syntax
 	url = git@github.com:ck3g/vim-change-hash-syntax.git
   ignore = dirty
+
+# Lib
+[submodule "lib/z"]
+	path = lib/z
+	url = https://github.com/rupa/z.git
+[submodule "lib/selecta"]
+	path = lib/selecta
+	url = git@github.com:garybernhardt/selecta.git
