--- a/tmux.conf
+++ b/tmux.conf
@@ -79,8 +79,8 @@ set -g status-utf8 on
 # Status line right side
 set -g status-right "#[fg=green]%d %B %R"
 
-# Update the status bar every sixty seconds
-set -g status-interval 60
+# Update the status bar every 5 seconds
+set -g status-interval 5
 
 # Center the window list
 set -g status-justify centre
