Minor tmux config changes.

--- a/tmux.conf
+++ b/tmux.conf
@@ -80,7 +80,7 @@ set -g status-utf8 on
 set -g status-right "#[fg=green]%d %B %R"
 
 # Update the status bar every 5 seconds
-set -g status-interval 5
+set -g status-interval 1
 
 # Center the window list
 set -g status-justify centre
@@ -99,3 +99,5 @@ bind -n C-l run-shell 'tmux-vim-select-pane -R'
 
 # Since C-l is used above, add Option-l fallback for screen clearing
 bind -n M-l send-keys "C-l"
+
+bind -n M-k clear-history
