Use new vim-matchit repository.

--- a/.gitmodules
+++ b/.gitmodules
@@ -43,7 +43,7 @@
 	url = git://github.com/scrooloose/syntastic.git
 [submodule "vim/bundle/vim-matchit"]
 	path = vim/bundle/vim-matchit
-	url = git://github.com/tsaleh/vim-matchit.git
+	url = git@github.com:vim-scripts/matchit.zip.git
   ignore = dirty
 [submodule "vim/bundle/xterm-color-table.vim"]
 	path = vim/bundle/xterm-color-table.vim
