--- a/tmux.conf
+++ b/tmux.conf
@@ -70,23 +70,23 @@ set -g message-fg white
 set -g message-bg black
 set -g message-attr bright
 
-# Status line left side
-set -g status-left-length 40
-set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
+# Status line
+# ------------------------------------------------------------------------------
+  set -g status-utf8 on
+  set -g status-interval 1
 
-set -g status-utf8 on
+  # Status line left side
+  set -g status-left-length 40
+  set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
 
-# Status line right side
-set -g status-right "#[fg=green]%d %B %R"
+  # Status line right side: clock
+  set -g status-right "#[fg=green]%a %-d %b %R"
 
-# Update the status bar every 5 seconds
-set -g status-interval 1
+  # Center the window list
+  set -g status-justify centre
 
-# Center the window list
-set -g status-justify centre
-
-# enable vi keys.
-setw -g mode-keys vi
+  # enable vi keys.
+  setw -g mode-keys vi
 
 # Log output to a text file on demand
 bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
