Introduce tmux colour-schemes.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,13 +1,10 @@
 set-option -g default-shell $SHELL
 set -g default-terminal "screen-256color"
 
-# Set the base index for windows to 1 instead of 0
 set -g base-index 1
-
-# Set the base index for panes to 1 instead of 0
 setw -g pane-base-index 1
 
-set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY ITERM_PROFILE"
+set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY ITERM_PROFILE ITERM_SESSION_ID"
 
 if-shell "uname | grep -qv Darwin" "set-environment -g 'SSH_AUTH_SOCK' ~/.ssh/ssh_auth_sock"
 
@@ -109,3 +106,7 @@ set -g message-attr bright
   bind '"' split-window -c "#{pane_current_path}"
   bind % split-window -h -c "#{pane_current_path}"
   bind c new-window -c "#{pane_current_path}"
+
+  bind -n M-k clear-history
+
+if-shell "iterm_session_profile | grep Light" "source ~/.tmux-light.conf"
