--- a/tmux.conf
+++ b/tmux.conf
@@ -19,22 +19,6 @@ set -g history-limit 5000
 #setting the delay between prefix and command
 set -sg escape-time 1
 
-# Ensure that we can send Ctrl-A to other apps
-bind C-a send-prefix
-
-# Reload the file with Prefix r
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
-
-# Quick pane selection
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
-
-# Pane resizing
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
-
 # mouse support
 setw -g mode-mouse on
 set -g mouse-select-pane on
@@ -48,16 +32,6 @@ set -g visual-activity off
 # set the status line's colors
 set -g status-fg default
 set -g status-bg default
-
-# set the color of the window list
-setw -g window-status-fg default
-setw -g window-status-bg default
-setw -g window-status-attr dim
-
-# set colors for the active window
-setw -g window-status-current-fg default
-setw -g window-status-current-bg white
-setw -g window-status-current-attr bright
 
 # pane colors
 set -g pane-border-fg green
@@ -85,19 +59,53 @@ set -g message-attr bright
   # Center the window list
   set -g status-justify centre
 
+  # set the color of the window list
+  setw -g window-status-fg default
+  setw -g window-status-bg default
+  setw -g window-status-attr dim
+
+  # set colors for the active window
+  setw -g window-status-current-fg default
+  setw -g window-status-current-bg white
+  setw -g window-status-current-attr bright
+
   # enable vi keys.
   setw -g mode-keys vi
 
-# Log output to a text file on demand
-bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
+# Bindings
+# ------------------------------------------------------------------------------
+  # Ensure that we can send Ctrl-A to other apps
+  bind C-a send-prefix
 
-# Smart pane switching with awareness of vim splits
-bind -n C-h run-shell 'tmux-vim-select-pane -L'
-bind -n C-j run-shell 'tmux-vim-select-pane -D'
-bind -n C-k run-shell 'tmux-vim-select-pane -U'
-bind -n C-l run-shell 'tmux-vim-select-pane -R'
+  # Reload the file with Prefix r
+  bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# Since C-l is used above, add Option-l fallback for screen clearing
-bind -n M-l send-keys "C-l"
+  # Quick pane selection
+  bind -r C-h select-window -t :-
+  bind -r C-l select-window -t :+
 
-bind -n M-k clear-history
+  # Pane resizing
+  bind -r H resize-pane -L 5
+  bind -r J resize-pane -D 5
+  bind -r K resize-pane -U 5
+  bind -r L resize-pane -R 5
+
+  # Log output to a text file on demand
+  bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
+
+  # Smart pane switching with awareness of vim splits
+  bind -n C-h run-shell 'tmux-vim-select-pane -L'
+  bind -n C-j run-shell 'tmux-vim-select-pane -D'
+  bind -n C-k run-shell 'tmux-vim-select-pane -U'
+  bind -n C-l run-shell 'tmux-vim-select-pane -R'
+
+  # Since C-l is used above, add Option-l fallback for screen clearing
+  bind -n M-l send-keys "C-l"
+
+  bind -n M-k clear-history
+
+  # Open new splits and windows in the current working directory
+  # http://unix.stackexchange.com/questions/12032
+  bind '"' split-window -c "#{pane_current_path}"
+  bind % split-window -h -c "#{pane_current_path}"
+  bind c new-window -c "#{pane_current_path}"
