Add dark tmux colourscheme.

--- a/tmux.conf
+++ b/tmux.conf
@@ -110,3 +110,4 @@ set -g message-attr bright
   bind -n M-k clear-history
 
 if-shell "iterm_session_profile | grep Light" "source ~/.tmux-light.conf"
+if-shell "iterm_session_profile | grep Dark" "source ~/.tmux-dark.conf"
