--- a/tmux.conf
+++ b/tmux.conf
@@ -63,7 +63,7 @@ set -g message-attr bright
 
   # set colors for the active window
   setw -g window-status-current-fg default
-  setw -g window-status-current-bg white
+  setw -g window-status-current-bg "#222222"
   setw -g window-status-current-attr bright
 
   # enable vi keys.
