--- a/tmux.conf
+++ b/tmux.conf
@@ -17,10 +17,11 @@ set -g history-limit 5000
 set -sg escape-time 1
 
 # mouse support
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+set -g mouse on
+
+# set -g mouse-select-pane on
+# set -g mouse-resize-pane on
+# set -g mouse-select-window on
 
 # enable activity alerts
 setw -g monitor-activity off
@@ -43,7 +44,6 @@ set -g message-attr bright
 
 # Status line
 # ------------------------------------------------------------------------------
-  set -g status-utf8 on
   set -g status-interval 1
 
   # Status line left side
