--- a/tmux.conf
+++ b/tmux.conf
@@ -16,12 +16,11 @@ set -g history-limit 5000
 #setting the delay between prefix and command
 set -sg escape-time 1
 
-# mouse support
-set -g mouse on
+# Tmux > 2.1
 
-# set -g mouse-select-pane on
-# set -g mouse-resize-pane on
-# set -g mouse-select-window on
+set -g mouse on
+# bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+# bind -n WheelDownPane select-pane -t= \; send-keys -M
 
 # enable activity alerts
 setw -g monitor-activity off
@@ -44,7 +43,7 @@ set -g message-attr bright
 
 # Status line
 # ------------------------------------------------------------------------------
-  set -g status-interval 1
+  set -g status-interval 10
 
   # Status line left side
   set -g status-left-length 40
