--- a/tmux.conf
+++ b/tmux.conf
@@ -10,25 +10,16 @@ if-shell "uname | grep -qv Darwin" "set-environment -g 'SSH_AUTH_SOCK' ~/.ssh/ss
 
 set -g prefix C-a
 
+# enable vi keys.
+setw -g mode-keys vi
+
 # Set scroll buffer
 set -g history-limit 5000
 
 #setting the delay between prefix and command
 set -sg escape-time 1
 
-# Tmux > 2.1
-
 set -g mouse on
-# bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
-# bind -n WheelDownPane select-pane -t= \; send-keys -M
-
-# enable activity alerts
-setw -g monitor-activity off
-set -g visual-activity off
-
-# set the status line's colors
-set -g status-fg default
-set -g status-bg default
 
 # pane colors
 set -g pane-border-fg green
@@ -43,30 +34,27 @@ set -g message-attr bright
 
 # Status line
 # ------------------------------------------------------------------------------
-  set -g status-interval 10
+  set -g status-interval 1
 
-  # Status line left side
-  set -g status-left-length 40
-  set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
+  # # set the status line's colors
+  set -g status-fg default
+  set -g status-bg default
 
   # Status line right side: clock
-  set -g status-right "#[fg=green]%a %-d %b %R"
-
-  # Center the window list
-  set -g status-justify centre
+  set -g status-left "[#S #I #P]"
+  set -g status-right "%a %-d %b %R"
 
   # set the color of the window list
   setw -g window-status-fg default
   setw -g window-status-bg default
   setw -g window-status-attr dim
 
+  set -g status-justify centre
+
   # set colors for the active window
   setw -g window-status-current-fg default
   setw -g window-status-current-bg "#222222"
   setw -g window-status-current-attr bright
-
-  # enable vi keys.
-  setw -g mode-keys vi
 
 # Bindings
 # ------------------------------------------------------------------------------
@@ -85,9 +73,6 @@ set -g message-attr bright
   bind -r J resize-pane -D 5
   bind -r K resize-pane -U 5
   bind -r L resize-pane -R 5
-
-  # Log output to a text file on demand
-  bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
 
   # Smart pane switching with awareness of vim splits
   bind -n C-h run-shell 'tmux-vim-select-pane -L'
