--- a/tmux-light.conf
+++ b/tmux-light.conf
@@ -1,17 +1,10 @@
 # Light colourscheme
 
-# Light background active window
-# set the color of the window list
-setw -g window-status-fg default
-setw -g window-status-bg default
-setw -g window-status-attr dim
-
 # set colors for the active window
-setw -g window-status-current-fg default
 setw -g window-status-current-bg white
 
-# Status line left side
-set -g status-left "#[fg=colour10]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
+# # Status line left side
+# set -g status-left "#[fg=colour10]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
 
-# Status line right side
-set -g status-right "#[fg=colour10]%d %b %R"
+# # Status line right side
+# set -g status-right "#[fg=colour10]%d %b %R"
