--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,8 @@
 set-option -g default-shell $SHELL
-set -g default-terminal "screen-256color"
+
+set -g default-terminal "tmux-256color"
+
+set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 
 set -g base-index 1
 setw -g pane-base-index 1
@@ -40,8 +43,10 @@ set -g message-attr bright
   set -g status-fg default
   set -g status-bg default
 
+  set -g status-left-length 64
+  set -g status-left '[#S #I #P] #[fg=red]#(git --git-dir=#{pane_current_path}/.git rev-parse --abbrev-ref HEAD)#[default] #[fg=yellow]#(git --git-dir=#{pane_current_path}/.git rev-parse --short HEAD)#[default]'
+
   # Status line right side: clock
-  set -g status-left "[#S #I #P]"
   set -g status-right "%a %-d %b %R"
 
   # set the color of the window list
@@ -72,7 +77,10 @@ set -g message-attr bright
   bind -r H resize-pane -L 5
   bind -r J resize-pane -D 5
   bind -r K resize-pane -U 5
-  bind -r L resize-pane -R 5
+  bind -r L resize-pane -R 6
+
+  # # Switch the attached client back to the last session (normally L)
+  # bind -r -L switch-client -l
 
   # Smart pane switching with awareness of vim splits
   bind -n C-h run-shell 'tmux-vim-select-pane -L'
