--- a/tmux.conf
+++ b/tmux.conf
@@ -48,6 +48,9 @@ setw -g window-status-current-style "fg=default bg=default bright"
 
 set -g status-justify centre
 
+# set colors for the active window
+setw -g window-status-current-style "fg=default bg=white bright"
+
 # Bindings
 # ------------------------------------------------------------------------------
 
@@ -85,4 +88,3 @@ bind -n M-k clear-history
 # Colourschemes
 # ------------------------------------------------------------------------------
 if-shell "iterm_session_profile | grep Light" "source ~/.tmux-light.conf"
-if-shell "iterm_session_profile | grep Dark" "source ~/.tmux-dark.conf"
