--- a/tmux.conf
+++ b/tmux.conf
@@ -1,15 +1,13 @@
-set-option -g default-shell $SHELL
-
+set -g default-shell $SHELL
 set -g default-terminal "tmux-256color"
 
+# italics
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 
 set -g base-index 1
 setw -g pane-base-index 1
 
 set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY ITERM_PROFILE ITERM_SESSION_ID"
-
-if-shell "uname | grep -qv Darwin" "set-environment -g 'SSH_AUTH_SOCK' ~/.ssh/ssh_auth_sock"
 
 set -g prefix C-a
 
@@ -48,9 +46,6 @@ setw -g window-status-current-style "fg=default bg=default bright"
 
 set -g status-justify centre
 
-# set colors for the active window
-setw -g window-status-current-style "fg=default bg=white bright"
-
 # Bindings
 # ------------------------------------------------------------------------------
 
@@ -83,8 +78,7 @@ bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
-bind -n M-k clear-history
-
 # Colourschemes
 # ------------------------------------------------------------------------------
 if-shell "iterm_session_profile | grep Light" "source ~/.tmux-light.conf"
+if-shell "iterm_session_profile | grep Dark" "source ~/.tmux-dark.conf"
