--- a/tmux.conf
+++ b/tmux.conf
@@ -25,81 +25,64 @@ set -sg escape-time 1
 set -g mouse on
 
 # pane colors
-set -g pane-border-fg green
-set -g pane-border-bg default
-set -g pane-active-border-fg green
-set -g pane-active-border-bg default
+set -g pane-border-style "fg=green bg=default"
+set -g pane-active-border-style "fg=green bg=default"
 
 # Command / message line
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
+set -g message-style "fg=white bg=black bright"
 
 # Status line
 # ------------------------------------------------------------------------------
-  set -g status-interval 1
+set -g status-interval 1
 
-  # # set the status line's colors
-  set -g status-fg default
-  set -g status-bg default
+set -g status-style "fg=default bg=default"
 
-  set -g status-left-length 64
-  set -g status-left '[#S #I #P] #[fg=red]#(git --git-dir=#{pane_current_path}/.git rev-parse --abbrev-ref HEAD)#[default] #[fg=yellow]#(git --git-dir=#{pane_current_path}/.git rev-parse --short HEAD)#[default]'
+set -g status-left-length 64
+set -g status-left '[#S #I #P] #[fg=red]#(git --git-dir=#{pane_current_path}/.git rev-parse --abbrev-ref HEAD)#[default] #[fg=yellow]#(git --git-dir=#{pane_current_path}/.git rev-parse --short HEAD)#[default] '
 
-  # Status line right side: clock
-  set -g status-right "%a %-d %b %R"
+# Status line right side: clock
+set -g status-right "%a %-d %b %R"
 
-  # set the color of the window list
-  setw -g window-status-fg default
-  setw -g window-status-bg default
-  setw -g window-status-attr dim
+setw -g window-status-style "fg=default bg=default dim"
+setw -g window-status-current-style "fg=default bg=default bright"
 
-  set -g status-justify centre
-
-  # set colors for the active window
-  setw -g window-status-current-fg default
-  setw -g window-status-current-bg "#222222"
-  setw -g window-status-current-attr bright
+set -g status-justify centre
 
 # Bindings
 # ------------------------------------------------------------------------------
-  # Ensure that we can send Ctrl-A to other apps
-  bind C-a send-prefix
 
-  # Reload the file with Prefix r
-  bind r source-file ~/.tmux.conf \; display "Reloaded!"
+# Ensure that we can send Ctrl-A to other apps
+bind C-a send-prefix
 
-  # Quick pane selection
-  bind -r C-h select-window -t :-
-  bind -r C-l select-window -t :+
+# Reload the file with Prefix r
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-  # Pane resizing
-  bind -r H resize-pane -L 5
-  bind -r J resize-pane -D 5
-  bind -r K resize-pane -U 5
-  bind -r L resize-pane -R 6
+# Pane resizing
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
 
-  # # Switch the attached client back to the last session (normally L)
-  # bind -r -L switch-client -l
+# Smart pane switching with awareness of vim splits
+bind -n C-h run-shell 'tmux-vim-select-pane -L'
+bind -n C-j run-shell 'tmux-vim-select-pane -D'
+bind -n C-k run-shell 'tmux-vim-select-pane -U'
+bind -n C-l run-shell 'tmux-vim-select-pane -R'
 
-  # Smart pane switching with awareness of vim splits
-  bind -n C-h run-shell 'tmux-vim-select-pane -L'
-  bind -n C-j run-shell 'tmux-vim-select-pane -D'
-  bind -n C-k run-shell 'tmux-vim-select-pane -U'
-  bind -n C-l run-shell 'tmux-vim-select-pane -R'
+# Since C-l is used above, bind Option-l to clear screen
+bind -n M-l send-keys "C-l"
 
-  # Since C-l is used above, add Option-l fallback for screen clearing
-  bind -n M-l send-keys "C-l"
+bind -n M-k clear-history
 
-  bind -n M-k clear-history
+# Open new splits and windows in the current working directory
+# http://unix.stackexchange.com/questions/12032
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
-  # Open new splits and windows in the current working directory
-  # http://unix.stackexchange.com/questions/12032
-  bind '"' split-window -c "#{pane_current_path}"
-  bind % split-window -h -c "#{pane_current_path}"
-  bind c new-window -c "#{pane_current_path}"
+bind -n M-k clear-history
 
-  bind -n M-k clear-history
-
+# Colourschemes
+# ------------------------------------------------------------------------------
 if-shell "iterm_session_profile | grep Light" "source ~/.tmux-light.conf"
 if-shell "iterm_session_profile | grep Dark" "source ~/.tmux-dark.conf"
