--- a/tmux-light.conf
+++ b/tmux-light.conf
@@ -1,4 +1,3 @@
 # Light colourscheme
 
-# set colors for the active window
-setw -g window-status-current-bg white
+setw -g window-status-current-style "fg=default bg=white bright"
