--- a/tmux.conf
+++ b/tmux.conf
@@ -7,7 +7,8 @@ set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 set -g base-index 1
 setw -g pane-base-index 1
 
-set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY ITERM_PROFILE ITERM_SESSION_ID"
+set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION \
+  WINDOWID XAUTHORITY ITERM_PROFILE ITERM_SESSION_ID"
 
 set -g prefix C-a
 
@@ -35,8 +36,12 @@ set -g status-interval 1
 
 set -g status-style "fg=default bg=default"
 
+# TODO: prevent this from pushing the centred window status list
 set -g status-left-length 64
-set -g status-left '[#S #I #P] #[fg=red]#(git --git-dir=#{pane_current_path}/.git rev-parse --abbrev-ref HEAD)#[default] #[fg=yellow]#(git --git-dir=#{pane_current_path}/.git rev-parse --short HEAD)#[default] '
+set -g status-left "[#S #I #P]\
+ #[fg=red]#(git --git-dir=#{pane_current_path}/.git rev-parse --abbrev-ref HEAD)\
+ #[fg=yellow]#(git --git-dir=#{pane_current_path}/.git rev-parse --short HEAD)\
+ #[default] "
 
 # Status line right side: clock
 set -g status-right "%a %-d %b %R"
@@ -54,6 +59,10 @@ bind C-a send-prefix
 
 # Reload the file with Prefix r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+# Quick window selection
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
 
 # Pane resizing
 bind -r H resize-pane -L 5
