--- a/tmux.conf
+++ b/tmux.conf
@@ -34,22 +34,18 @@ set -g message-style "fg=white bg=black bright"
 # ------------------------------------------------------------------------------
 set -g status-interval 1
 
-set -g status-style "fg=default bg=default"
+set -g status-style "fg=default bg=white"
 
-# TODO: prevent this from pushing the centred window status list
-set -g status-left-length 64
-set -g status-left "[#S #I #P]\
+set -g status-left "[#S #I #P] "
+
+set -g status-right-length 64
+set -g status-right "\
  #[fg=red]#(git --git-dir=#{pane_current_path}/.git rev-parse --abbrev-ref HEAD)\
  #[fg=yellow]#(git --git-dir=#{pane_current_path}/.git rev-parse --short HEAD)\
- #[default] "
-
-# Status line right side: clock
-set -g status-right "%a %-d %b %R"
+ #[default]#[bright]%F %R#[default]"
 
 setw -g window-status-style "fg=default bg=default dim"
 setw -g window-status-current-style "fg=default bg=default bright"
-
-set -g status-justify centre
 
 # Bindings
 # ------------------------------------------------------------------------------
