Move tmux status line around a bit

--- a/tmux.conf
+++ b/tmux.conf
@@ -42,7 +42,7 @@ set -g status-right-length 64
 set -g status-right "\
  #[fg=red]#(git --git-dir=#{pane_current_path}/.git rev-parse --abbrev-ref HEAD)\
  #[fg=yellow]#(git --git-dir=#{pane_current_path}/.git rev-parse --short HEAD)\
- #[default]#[bright]%F %R#[default]"
+ #[default]%F %R"
 
 setw -g window-status-style "fg=default bg=default dim"
 setw -g window-status-current-style "fg=default bg=default bright"
