--- a/tmux-light.conf
+++ b/tmux-light.conf
@@ -1,3 +1,4 @@
 # Light colourscheme
 
-setw -g window-status-current-style "fg=default bg=white bright"
+setw -g window-status-current-style 'fg=white bg=colour010 bright'
+set -g status-style "fg=default bg=white"
