--- a/tmux.conf
+++ b/tmux.conf
@@ -1,43 +1,26 @@
 set -g default-shell $SHELL
 set -g default-terminal "tmux-256color"
+set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION \
+  WINDOWID XAUTHORITY ITERM_PROFILE ITERM_SESSION_ID"
 
 # italics
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 
 set -g base-index 1
 setw -g pane-base-index 1
-
-set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION \
-  WINDOWID XAUTHORITY ITERM_PROFILE ITERM_SESSION_ID"
-
 set -g prefix C-a
-
-# enable vi keys.
 setw -g mode-keys vi
-
-# Set scroll buffer
 set -g history-limit 5000
-
-# setting the delay between prefix and command
 set -sg escape-time 1
-
 set -g mouse on
-
-# pane colors
 set -g pane-border-style "fg=green bg=default"
 set -g pane-active-border-style "fg=green bg=default"
-
-# Command / message line
 set -g message-style "fg=white bg=black bright"
 
 # Status line
 # ------------------------------------------------------------------------------
 set -g status-interval 1
-
-set -g status-style "fg=default bg=white"
-
-set -g status-left "[#S #I #P] "
-
+set -g status-left "#[dim][#S #I #P]#[default] "
 set -g status-right-length 64
 set -g status-right "\
  #[fg=red]#(git --git-dir=#{pane_current_path}/.git rev-parse --abbrev-ref HEAD)\
