--- a/tmux.conf
+++ b/tmux.conf
@@ -1,14 +1,14 @@
 set -g default-shell $SHELL
 set -g default-terminal "tmux-256color"
-set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION \
-  WINDOWID XAUTHORITY ITERM_PROFILE ITERM_SESSION_ID"
+set -g update-environment "\
+  DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION \
 
 # italics
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 
+set -g prefix C-a
 set -g base-index 1
 setw -g pane-base-index 1
-set -g prefix C-a
 setw -g mode-keys vi
 set -g history-limit 5000
 set -sg escape-time 1
@@ -19,6 +19,7 @@ set -g message-style "fg=white bg=black bright"
 
 # Status line
 # ------------------------------------------------------------------------------
+set -g status-style "fg=default bg=default"
 set -g status-interval 1
 set -g status-left "#[dim][#S #I #P]#[default] "
 set -g status-right-length 64
