--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,8 @@
 set -g default-shell $SHELL
 set -g default-terminal "tmux-256color"
-set -g update-environment "\
-  DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION \
+
+set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION \
+  WINDOWID XAUTHORITY ITERM_PROFILE ITERM_SESSION_ID"
 
 # italics
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
