--- a/tmux.conf
+++ b/tmux.conf
@@ -70,5 +70,5 @@ bind c new-window -c "#{pane_current_path}"
 
 # Colourschemes
 # ------------------------------------------------------------------------------
-if-shell "iterm_session_profile | grep Light" "source ~/.tmux-light.conf"
-if-shell "iterm_session_profile | grep Dark" "source ~/.tmux-dark.conf"
+if-shell "iterm_session_profile | grep Light" "source ~/.tmux/light.conf"
+if-shell "iterm_session_profile | grep Dark" "source ~/.tmux/dark.conf"
