--- a/tmux.conf
+++ b/tmux.conf
@@ -1,11 +1,8 @@
 set -g default-shell $SHELL
 set -g default-terminal "tmux-256color"
-set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION \
-  WINDOWID XAUTHORITY ITERM_PROFILE ITERM_SESSION_ID"
-
-# italics
-set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
-
+set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID \
+  SSH_CONNECTION WINDOWID XAUTHORITY ITERM_PROFILE ITERM_SESSION_ID"
+set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m' # italics
 set -g prefix C-a
 set -g base-index 1
 setw -g pane-base-index 1
@@ -26,8 +23,7 @@ set -g status-right-length 64
 set -g status-right "\
  #[fg=red]#(git --git-dir=#{pane_current_path}/.git rev-parse --abbrev-ref HEAD)\
  #[fg=yellow]#(git --git-dir=#{pane_current_path}/.git rev-parse --short HEAD)\
- #[default]%F %R"
-
+ #[default]%a %-d %b %R"
 setw -g window-status-style "fg=default bg=default dim"
 setw -g window-status-current-style "fg=default bg=default bright"
 
