--- a/tmux/black.conf
+++ b/tmux/black.conf
@@ -1,4 +1,4 @@
 # Black colourscheme
 
-setw -g window-status-current-style "fg=default bg=white bright"
+setw -g window-status-current-style "fg=default bg=colour241 bright"
 set -g status-style "fg=default bg=black"
