--- a/tmux.conf
+++ b/tmux.conf
@@ -31,8 +31,8 @@ setw -g window-status-current-style "fg=default bg=default bright"
 # ------------------------------------------------------------------------------
 
 # Prefix-unbound alphabet keys
-# a, b, e, g, h, j, k, u, v, y, A, B, C, F, G, N, O, P, Q, R, S, T, U, V, W, X,
-# Y, Z
+# a, b, e, g, h, j, k, u, v, y, A, B, C, F, G, N, O, Q, R, S, T, U, V, W, X, Y,
+# Z
 
 # Ensure that we can send Ctrl-A to other apps
 bind C-a send-prefix
@@ -52,6 +52,9 @@ bind -r L resize-pane -R 5
 
 # Interactive ruby shell pane
 bind -r I run-shell 'tmux-irb #{pane_current_path}'
+
+# Psql
+bind -r P run-shell 'tmux-psql #{pane_current_path}'
 
 # Smart pane switching with awareness of vim splits
 bind -n C-h run-shell 'tmux-vim-select-pane -L'
