List default tmux bindings, for diffing

--- a/tmux.conf
+++ b/tmux.conf
@@ -30,6 +30,10 @@ setw -g window-status-current-style "fg=default bg=default bright"
 # Bindings
 # ------------------------------------------------------------------------------
 
+# Prefix-unbound alphabet keys
+# a, b, e, g, h, j, k, u, v, y, A, B, C, F, G, I, N, O, P, Q, R, S, T, U, V, W,
+# X, Y, Z
+
 # Ensure that we can send Ctrl-A to other apps
 bind C-a send-prefix
 
