Tmux git branch tracking ahead / behind info

--- a/tmux.conf
+++ b/tmux.conf
@@ -21,6 +21,7 @@ set -g status-interval 1
 set -g status-left "#[dim][#S #I #P]#[default] "
 set -g status-right-length 64
 set -g status-right "\
+ #(tmux-branch-tracking-info #{pane_current_path})\
  #[fg=red]#(git --git-dir=#{pane_current_path}/.git rev-parse --abbrev-ref HEAD)\
  #[fg=yellow]#(git --git-dir=#{pane_current_path}/.git rev-parse --short HEAD)\
  #[default]%a %-d %b %R"
