Consolidate all bits of tmux git into one script

--- a/tmux.conf
+++ b/tmux.conf
@@ -19,12 +19,9 @@ set -g message-style "fg=white bg=black bright"
 set -g status-style "fg=default bg=default"
 set -g status-interval 1
 set -g status-left "#[dim][#S #I #P]#[default] "
-set -g status-right-length 64
-set -g status-right "\
- #(tmux-branch-tracking-info #{pane_current_path})\
- #[fg=red]#(git --git-dir=#{pane_current_path}/.git rev-parse --abbrev-ref HEAD)\
- #[fg=yellow]#(git --git-dir=#{pane_current_path}/.git rev-parse --short HEAD)\
- #[default]%a %-d %b %R"
+set -g status-left-length 30
+set -g status-right-length 100
+set -g status-right "#(tmux-git-info #{pane_current_path})#[default] %a %-d %b %R"
 setw -g window-status-style "fg=default bg=default dim"
 setw -g window-status-current-style "fg=default bg=default bright"
 
