--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 set -g default-shell $SHELL
 set -g default-terminal "tmux-256color"
-set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID \
-  SSH_CONNECTION WINDOWID XAUTHORITY ITERM_PROFILE ITERM_SESSION_ID"
+set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION \
+  WINDOWID XAUTHORITY ITERM_PROFILE ITERM_SESSION_ID"
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m' # italics
 set -g prefix C-a
 set -g base-index 1
@@ -71,8 +71,7 @@ bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
-# Colourschemes
-# ------------------------------------------------------------------------------
-if-shell "iterm_session_profile | grep Light" "source ~/.tmux/light.conf"
-if-shell "iterm_session_profile | grep Dark" "source ~/.tmux/dark.conf"
-if-shell "iterm_session_profile | grep Black" "source ~/.tmux/black.conf"
+# # Colourschemes
+# if-shell "iterm_session_profile | grep Light" "source ~/.tmux/light.conf"
+# if-shell "iterm_session_profile | grep Dark" "source ~/.tmux/dark.conf"
+# if-shell "iterm_session_profile | grep Black" "source ~/.tmux/black.conf"
