--- a/tmux.conf
+++ b/tmux.conf
@@ -75,3 +75,5 @@ bind c new-window -c "#{pane_current_path}"
 # if-shell "iterm_session_profile | grep Light" "source ~/.tmux/light.conf"
 # if-shell "iterm_session_profile | grep Dark" "source ~/.tmux/dark.conf"
 # if-shell "iterm_session_profile | grep Black" "source ~/.tmux/black.conf"
+
+run-shell ~/.tmux/tmux-resurrect/resurrect.tmux
