??? Trial tmux renumber-window setting

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,7 @@ set -g mouse on
 set -g pane-active-border-style "fg=green bg=default"
 set -g pane-border-style "fg=green bg=default"
 set -g prefix C-a
+set -g renumber-windows on
 set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY ITERM_PROFILE ITERM_SESSION_ID"
 set -sg escape-time 1
 setw -g mode-keys vi
