--- a/tmux.conf
+++ b/tmux.conf
@@ -36,6 +36,7 @@ bind-key -n C-k run-shell 'tmux-vim-select-pane -U'
 bind-key -n C-l run-shell 'tmux-vim-select-pane -R'
 bind-key -n M-k clear-history
 bind-key -n M-l send-keys "C-l"
+bind-key -n M-r source-file ~/.tmux.conf \; display "Reloaded!"
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 bind-key -r H resize-pane -L 10
@@ -43,8 +44,9 @@ bind-key -r I run-shell 'tmux-irb #{pane_current_path}'
 bind-key -r J resize-pane -D 10
 bind-key -r K resize-pane -U 10
 bind-key -r L resize-pane -R 10
+bind-key -r M-k clear-history
+bind-key -r M-l send-keys "C-l"
 bind-key -r P run-shell 'tmux-psql #{pane_current_path}'
-bind-key -r r source-file ~/.tmux.conf \; display "Reloaded!"
 bind-key C-a send-prefix
 bind-key c new-window -c "#{pane_current_path}"
 
