Second attempt at tmux activity monitoring

--- a/tmux.conf
+++ b/tmux.conf
@@ -12,7 +12,9 @@ set -g renumber-windows on
 set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY ITERM_PROFILE ITERM_SESSION_ID"
 set -sg escape-time 1
 setw -g mode-keys vi
+setw -g monitor-activity on
 setw -g pane-base-index 1
+setw -g window-status-activity-style "bg=colour005 fg=white italics"
 
 # status line
 set -g status-interval 1
@@ -22,7 +24,7 @@ set -g status-right "#(tmux-git-info #{pane_current_path})#[default] %a %-d %b %
 set -g status-right-length 100
 set -g status-style "fg=default bg=default"
 setw -g window-status-current-style "fg=default bg=default bright"
-setw -g window-status-style "fg=default bg=default dim"
+setw -g window-status-style "fg=default bg=default dim italics"
 
 # alphabet keys without prefix bindings:
 # a, b, e, g, h, j, k, u, v, y, A, B, C, F, G, N, O, Q, R, S, T, U, V, W, X, Y, Z
