--- a/tmux.conf
+++ b/tmux.conf
@@ -5,8 +5,8 @@ set -g default-terminal "tmux-256color"
 set -g history-limit 5000
 set -g message-style "fg=white bg=black bright"
 set -g mouse on
-set -g pane-active-border-style "fg=green bg=default"
-set -g pane-border-style "fg=green bg=default"
+set -g pane-active-border-style "fg=default bg=default"
+set -g pane-border-style "fg=default bg=default"
 set -g prefix C-a
 set -g renumber-windows on
 set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY ITERM_PROFILE ITERM_SESSION_ID"
@@ -18,7 +18,7 @@ setw -g window-status-activity-style "bg=colour005 fg=white italics"
 
 # status line
 set -g status-interval 1
-set -g status-left "#[dim][#S #I #P]#[default] "
+set -g status-left "#[dim][#S]#[default] "
 set -g status-left-length 30
 set -g status-right "#(tmux-git-info #{pane_current_path})#[default] %a %-d %b %R:%S"
 set -g status-right-length 100
