Change tmux config: consolidate options, sort, non-global colours

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,24 +9,18 @@ set -g pane-active-border-style "fg=default default"
 set -g pane-border-style "fg=default default"
 set -g prefix C-a
 set -g renumber-windows on
-set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
-set -sg escape-time 1
-setw -g mode-keys vi
-setw -g monitor-activity on
-setw -g pane-base-index 1
-setw -g window-status-activity-style "italics"
-
-# status line
 set -g status-interval 1
 set -g status-left "#[dim][#S]#[default] "
 set -g status-left-length 30
 set -g status-right "#(tmux-git-info #{pane_current_path})#[default] %a %-d %b %R:%S"
 set -g status-right-length 100
-setw -g window-status-current-style "fg=default bg=default"
+set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
+set -sg escape-time 1
+setw -g mode-keys vi
+setw -g monitor-activity on
+setw -g pane-base-index 1
+setw -g window-status-current-style "fg=default bg=default bright"
 setw -g window-status-style "dim italics"
-
-# alphabet keys without prefix bindings:
-# a, b, e, g, h, j, k, u, v, y, A, B, C, F, G, N, O, Q, R, S, T, U, V, W, X, Y, Z
 
 bind-key % split-window -h -c "#{pane_current_path}"
 bind-key '"' split-window -c "#{pane_current_path}"
@@ -54,8 +48,6 @@ bind-key c new-window -c "#{pane_current_path}"
 
 unbind Space
 
-# colourschemes
-# TODO hook to run these too
 if-shell "iterm current_profile | grep Light" "source ~/.tmux/light.conf"
 if-shell "iterm current_profile | grep Dark" "source ~/.tmux/dark.conf"
 if-shell "iterm current_profile | grep Black" "source ~/.tmux/black.conf"
