--- a/tmux/black.conf
+++ b/tmux/black.conf
@@ -2,6 +2,5 @@
 
 set -g pane-active-border-style "fg=green"
 set -g pane-border-style "fg=green"
-set -g status-style "fg=default bg=black"
-# setw -g window-status-current-style "fg=black bg=green bright"
+set -g status-style "bg=black"
 setw -g window-status-current-style "fg=colour231 bg=magenta bright"
