Fix light and black tmux powerline themes window status

--- a/tmux/black-powerline.conf
+++ b/tmux/black-powerline.conf
@@ -5,5 +5,5 @@ set -g pane-border-style "fg=green"
 set -g status-left "#[fg=colour087 bg=cyan] #S #[default fg=cyan]"
 set -g status-style "bg=black"
 setw -g window-status-current-format "#[default fg=magenta]#[bg=magenta fg=white]#[bright]#I:#W#F#[default fg=magenta]"
-setw -g window-status-format "#[default fg=colour236]#[default bg=colour236]#I:#W#F#[bg=default fg=colour236]"
+setw -g window-status-format "#[default fg=colour236]#[default bg=colour236 dim italics]#I:#W#F#[bg=default fg=colour236]"
 setw -g window-status-separator ""
