Fix tmux binding for changed option parsing in 3.0a

--- a/tmux.conf
+++ b/tmux.conf
@@ -23,7 +23,7 @@ setw -g window-status-style "dim italics"
 
 bind-key % split-window -h -c "#{pane_current_path}"
 bind-key '"' split-window -c "#{pane_current_path}"
-bind-key -n C-\ resize-pane -Z
+bind-key -n 'C-\' resize-pane -Z
 bind-key -n C-h run-shell 'tmux-vim-select-pane -L'
 bind-key -n C-j run-shell 'tmux-vim-select-pane -D'
 bind-key -n C-k run-shell 'tmux-vim-select-pane -U'
