Remove seconds from tmux status line

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,7 +11,7 @@ set -g prefix2 C-Space
 set -g renumber-windows on
 set -g status-interval 1
 set -g status-left-length 30
-set -g status-right "#(tmux-git-info '#{pane_current_path}') %a %-d %b %R:%S"
+set -g status-right "#(tmux-git-info '#{pane_current_path}') %a %-d %b %R"
 set -g status-right-length 100
 set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
 set -sg escape-time 1
