Profile switching for Alacritty

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,7 +13,7 @@ set -g status-interval 1
 set -g status-left-length 30
 set -g status-right "#(tmux-git-info '#{pane_current_path}') %a %-d %b %R"
 set -g status-right-length 100
-set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
+set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY TERM_PROGRAM TERM_PROFILE"
 set -sg escape-time 1
 setw -g mode-keys vi
 setw -g monitor-activity on
