--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -1,11 +1,10 @@
 live_config_reload = true
 
 import = [
-  "~/.config/alacritty/tokyo-night-alacritty-theme/tokyo-night.toml",
+  "~/.config/alacritty/profile.toml"
 ]
 
 [env]
-TERM_PROFILE = 'TokyoNight'
 TERM_PROGRAM = 'Alacritty'
 
 [window]
@@ -16,14 +15,8 @@ decorations = "None"
 [selection]
 save_to_clipboard = true
 
-[colors]
-draw_bold_text_with_bright_colors = true
-
 [font]
 size = 13
-
-[font.normal]
-family = "JetBrainsMono NF"
 
 [keyboard]
 bindings = [
